kubernetes/alexferl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexferl
  labels:
    app: alexferl
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: alexferl
    tier: frontend
