kubernetes/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: alexferl
  labels:
    app: alexferl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alexferl
  template:
    metadata:
      labels:
        app: alexferl
    spec:
      containers:
      - name: alexferl
        image: gcr.io/kube-1153/alexferl:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
---
kind: Service
apiVersion: v1
metadata:
  name: alexferl
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: alexferl
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: alexferl
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: lb
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: lb
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - alexferl.com
      - www.alexferl.com
      secretName: alexferl-com-tls
  rules:
  - host: alexferl.com
    http:
      paths:
      - path: '/*'
        backend:
          serviceName: alexferl
          servicePort: 8080
  - host: www.alexferl.com
    http:
      paths:
      - path: '/*'
        backend:
          serviceName: alexferl
          servicePort: 8080
